@@ -18,7 +18,12 @@
 package org.apache.solr.search;
 
 import org.apache.lucene.search.HitCollector;
+import org.apache.lucene.search.Collector;
+import org.apache.lucene.search.Scorer;
 import org.apache.lucene.util.OpenBitSet;
+import org.apache.lucene.index.IndexReader;
+
+import java.io.IOException;
 
 /**
  * @version $Id$
@@ -74,5 +79,68 @@ final class DocSetHitCollector extends HitCollector {
       for (int i=0; i<scratch.length; i++) bits.fastSet(scratch[i]);
       return new BitDocSet(bits,pos);
     }
+  }
+}
+
+
+class DocSetCollector extends Collector {
+
+  final float HASHSET_INVERSE_LOAD_FACTOR;
+  final int HASHDOCSET_MAXSIZE;
+
+  int pos=0;
+  OpenBitSet bits;
+  final int maxDoc;
+  int base=0;
+
+  // in case there aren't that many hits, we may not want a very sparse
+  // bit array.  Optimistically collect the first few docs in an array
+  // in case there are only a few.
+  final int[] scratch;
+
+  // todo - could pass in bitset and an operation also...
+  DocSetCollector(float inverseLoadFactor, int maxSize, int maxDoc) {
+    this.maxDoc = maxDoc;
+    HASHSET_INVERSE_LOAD_FACTOR = inverseLoadFactor;
+    HASHDOCSET_MAXSIZE = maxSize;
+    scratch = new int[HASHDOCSET_MAXSIZE];
+  }
+
+  public void collect(int doc) {
+    doc += base;
+    // optimistically collect the first docs in an array
+    // in case the total number will be small enough to represent
+    // as a HashDocSet() instead...
+    // Storing in this array will be quicker to convert
+    // than scanning through a potentially huge bit vector.
+    // FUTURE: when search methods all start returning docs in order, maybe
+    // we could have a ListDocSet() and use the collected array directly.
+    if (pos < scratch.length) {
+      scratch[pos]=doc;
+    } else {
+      // this conditional could be removed if BitSet was preallocated, but that
+      // would take up more memory, and add more GC time...
+      if (bits==null) bits = new OpenBitSet(maxDoc);
+      bits.fastSet(doc);
+    }
+
+    pos++;
+  }
+
+  public DocSet getDocSet() {
+    if (pos<=scratch.length) {
+      return new HashDocSet(scratch,0,pos,HASHSET_INVERSE_LOAD_FACTOR);
+    } else {
+      // set the bits for ids that were collected in the array
+      for (int i=0; i<scratch.length; i++) bits.fastSet(scratch[i]);
+      return new BitDocSet(bits,pos);
+    }
+  }
+
+  public void setScorer(Scorer scorer) throws IOException {
+  }
+
+  public void setNextReader(IndexReader reader, int docBase) throws IOException {
+    this.base = docBase;
   }
 }
